# GregoreLite

./: .commit_msg  .git_commit_msg.txt  .gregignore  BLUEPRINT_FINAL.md  BLUEPRINT_S5_CrossContext.md  BLUEPRINT_S6_Ghost.md  BLUEPRINT_S7_AgentSDK_SelfEvolution.md  COUNCIL_PROMPT_1_CrossContext.md  COUNCIL_PROMPT_2_GhostThread.md  COUNCIL_PROMPT_3_AgentSDK.md  DEV_PROTOCOLS.md  EPIC81_COMPLETE.md  EPIC81_EXECUTION_PROMPT.md  FEATURE_BACKLOG.md  GREGORE_AUDIT.md  HANDOFF.md  MORNING_BRIEFING.md  PHASE1_EXECUTION_BRIEF.md  PHASE2A_EXECUTION_BRIEF.md  PHASE2B_EXECUTION_BRIEF.md  PHASE2C_EXECUTION_BRIEF.md  PHASE2D_EXECUTION_BRIEF.md  PHASE2E_EXECUTION_BRIEF.md  PHASE3A_EXECUTION_BRIEF.md  PHASE3B_EXECUTION_BRIEF.md  PHASE3C_EXECUTION_BRIEF.md  PHASE3D_EXECUTION_BRIEF.md  PHASE3E_EXECUTION_BRIEF.md  PHASE3F_EXECUTION_BRIEF.md  PHASE3G_EXECUTION_BRIEF.md  PHASE3H_EXECUTION_BRIEF.md  PHASE4A_EXECUTION_BRIEF.md  PHASE4B_EXECUTION_BRIEF.md  PHASE4C_EXECUTION_BRIEF.md  PHASE5A_EXECUTION_BRIEF.md  PHASE5B_EXECUTION_BRIEF.md  PHASE5C_EXECUTION_BRIEF.md  PHASE6A_EXECUTION_BRIEF.md  PHASE6B_EXECUTION_BRIEF.md  PHASE6C_EXECUTION_BRIEF.md  (+274 more)
.kernl/: greglite.db-shm  (+1 more)
app/src-tauri/: Cargo.toml  cargo_check_output.txt  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: save_icon.ps1
app/src-tauri/nsis/: startup-hooks.nsi
app/src-tauri/src/: main.rs  notifications.rs  startup.rs  tray.rs
app/src-tauri/src/aegis/: metrics.rs  mod.rs  profiles.rs  timer.rs  types.rs
app/src-tauri/src/ghost/: debouncer.rs  events.rs  exclusions.rs  mod.rs  watcher.rs
(+776 files in other folders)
