[package]
name = "gregore"
version = "1.1.0"
description = "GREGORE - Cognitive Operating System"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"
